<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sample</string>
    
    <string name="action_settings">Settings</string>
    <string name="str1">Start the sensors</string>
    <string name="str2">Stop sensors</string>
    <string name="str3">Save Data</string>
    <string name="str4">Create</string>
    <string name="str5">Insert</string>
    <string name="str6">Retrieve</string>
    <string name="str7">Delete</string>
    <string name="TableFunctions">Table Functions</string>
    

</resources>
