<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:addStatesFromChildren="false"
    android:background="@drawable/white"
    tools:context="com.example.lab3bd.MainActivity"
    tools:ignore="MergeRootFrame" >

    <WebView
        android:id="@+id/webView1"
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:layout_gravity="bottom" />

    <Button
        android:id="@+id/button1"
        android:layout_width="156dp"
        android:layout_height="87dp"
        android:onClick="startsensors"
        android:padding="20dp"
        android:paddingLeft="60dp"
        android:paddingTop="100dp"
        android:text="@string/str1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="158dp"
        android:layout_height="85dp"
        android:layout_gravity="right"
        android:onClick="stopsensors"
        android:text="@string/str2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:text="@string/str3"
        android:onClick="savedata" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="120dp"
        android:text="@string/str4"
        android:onClick="createtable" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="50dp"
        android:text="@string/str5"
        android:onClick="" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="65dp"
        android:text="@string/str6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="120dp"
        android:text="@string/str7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="55dp"
        android:text="@string/TableFunctions"
        android:textSize="30sp" />

</FrameLayout>